[gd_scene load_steps=8 format=3 uid="uid://cm223y6l1j46q"]

[ext_resource type="Script" path="res://scenes/fish/fish_shadow.gd" id="1_dtt6a"]
[ext_resource type="Texture2D" uid="uid://c4ui62aoqdc0k" path="res://assets/textures/fishing_game_pack/fish_shadow.png" id="2_o4f0u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gv4jx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2mo0t"]
height = 48.0

[sub_resource type="Animation" id="Animation_jm6c8"]
resource_name = "move"
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteNormalizer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 1.05), Vector2(1.15, 0.95), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4kjgu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteNormalizer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ve8ao"]
_data = {
"RESET": SubResource("Animation_4kjgu"),
"move": SubResource("Animation_jm6c8")
}

[node name="FishShadow" type="CharacterBody2D"]
script = ExtResource("1_dtt6a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gv4jx")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2mo0t")

[node name="SpriteNormalizer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="SpriteNormalizer"]
rotation = 2.54644
scale = Vector2(2, 2)
texture = ExtResource("2_o4f0u")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 30.0

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ve8ao")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_hook_reached"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
